Break the profile-info box height fix out into a function so we can make sure it works overtime a tab is clicked (fixes #316)

--- a/mzalendo/core/static/sass/desktop.scss
+++ b/mzalendo/core/static/sass/desktop.scss
@@ -461,7 +461,6 @@ josh [at] supercooldesign.co.uk
     }
   }
   .profile-info {
-    min-height:200px;
     width:210px;
     position:absolute;
     top:210px;
